--- a/app/templates/sidebar.latte
+++ b/app/templates/sidebar.latte
@@ -2,6 +2,6 @@
 	<div class="list-group">
 		<a n:href="clearCache!" class="list-group-item">Smazat cache</a>
 		<a n:href="Homepage:" class="list-group-item active">Hledání letů s cenou v přehledu</a>
-		{*<a href="#" class="list-group-item">Link</a>*}
+		{*<a n:href="Shop:" class="list-group-item">Payment test</a>*}
 	</div>
 </div>
