--- a/app/templates/header.latte
+++ b/app/templates/header.latte
@@ -18,6 +18,26 @@
 				<li><a href="#contact">Contact</a>
 				</li>
 			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Language <b class="caret"></b></a>
+					<ul class="dropdown-menu" style="">
+						<li class="dropdown-header">Original</li>
+						<li><a n:href="changeLang! cs">Čeština</a></li>
+						<li class="divider"></li>
+						<li><a n:href="changeLang! en">Angličtina (en)</a></li>
+						<li><a n:href="changeLang! hu">Maďarština (hu)</a></li>
+						<li><a n:href="changeLang! es">Španělština (es)</a></li>
+						<li><a n:href="changeLang! sk">Slovenština (sk)</a></li>
+						<li><a n:href="changeLang! ru">Ruština (ru)</a></li>
+						<li><a n:href="changeLang! uk">Ukrajinština (uk)</a></li>
+						<li><a n:href="changeLang! fr">Francouština (fr)</a></li>
+						<li><a n:href="changeLang! de">Němčina (de)</a></li>
+						<li><a n:href="changeLang! pl">Polština (pl)</a></li>
+						<li><a n:href="changeLang! it">Italština (it)</a></li>
+					</ul>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
