basic parametric search (with out validations)

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -33,6 +33,9 @@
 	<div class="container-fluid">
 		<div class="row row-offcanvas row-offcanvas-right">
 			<div class="col-xs-12 col-sm-3">
+				<a n:href="default pricer_pref => 'MUP', dep_0=>'PRG', arr_0=>'BTS', full_date_0=>'2015-02-20'">Praha -> Bratislava</a><br>
+				<a n:href="default pricer_pref => 'MUP', dep_0=>'BTS', arr_0=>'SYD', full_date_0=>'2015-02-24'">Bratislava -> Sydney</a><br>
+
 				<div n:snippet="debugResponse">
 					{ifset $debugResponse}{!$debugResponse}{/ifset}
 				</div>
