--- a/app/templates/header.latte
+++ b/app/templates/header.latte
@@ -11,12 +11,9 @@
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a>
-				</li>
-				<li><a href="#about">About</a>
-				</li>
-				<li><a href="#contact">Contact</a>
-				</li>
+				<li n:class="$presenter->isLinkCurrent('Homepage:default') ? active"><a n:href="Homepage:">Home</a></li>
+				<li n:class="$presenter->isLinkCurrent('Homepage:search') ? active"><a n:href="Homepage:search">Search</a></li>
+				<li n:class="$presenter->isLinkCurrent('Homepage:contact') ? active"><a href="#contact">Contact</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
