--- a/www/css/offcanvas.css
+++ b/www/css/offcanvas.css
@@ -51,3 +51,11 @@ footer {
 }
 
 .text-white { color: white; }
+.well-custom {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 10px;
+    border: 1px solid #E3E3E3;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+}
